# trade

./: README.md  pyproject.toml  requirements.txt
src/trade/: app.py  dashboard.py  download.py  function_year.py
src/trade/data/: all_countries_lat_lon.csv
